--- a/administrator/language/vn-VN/com_modules.ini
+++ b/administrator/language/vn-VN/com_modules.ini
@@ -45,16 +45,16 @@ COM_MODULES_FIELD_CACHING_LABEL="Caching"
 COM_MODULES_FIELD_CLIENT_ID_LABEL="Module Location"
 COM_MODULES_FIELD_CONTENT_LABEL="Text"
 COM_MODULES_FIELD_CONTENT_TOO_LARGE="The content exceeds allowed limits"
-COM_MODULES_FIELD_HEADER_CLASS_LABEL="Chèn CSS class vào Thẻ html bao quanh tiêu đề module"
-COM_MODULES_FIELD_HEADER_TAG_LABEL="Thẻ html bao quanh tiêu đề module"
+COM_MODULES_FIELD_HEADER_CLASS_LABEL="Chèn CSS class vào Thẻ html bao quanh tiêu đề của module"
+COM_MODULES_FIELD_HEADER_TAG_LABEL="Thẻ html bao quanh tiêu đề của module"
 COM_MODULES_FIELD_MODULE_LABEL="Module Type"
 COM_MODULES_FIELD_MODULE_STYLE_LABEL="Module Style (định dạng kết cấu html bao bọc module)"
 COM_MODULES_FIELD_MODULE_TAG_LABEL="Module Tag (thẻ html ngoài cùng)"
 COM_MODULES_FIELD_MODULECLASS_SFX_LABEL="Chèn Css Class vào thẻ html ngoài cùng"
-COM_MODULES_FIELD_NOTE_LABEL="Note"
+COM_MODULES_FIELD_NOTE_LABEL="Ghi chú vào phần quản trị của admin"
 COM_MODULES_FIELD_POSITION_LABEL="Điểm neo (Position)"
-COM_MODULES_FIELD_PUBLISH_DOWN_LABEL="Finish Publishing"
-COM_MODULES_FIELD_PUBLISH_UP_LABEL="Start Publishing"
+COM_MODULES_FIELD_PUBLISH_DOWN_LABEL="Finish Publishing (Ấn định thời điểm TẮT module) (để trống khi không dùng chức năng này)"
+COM_MODULES_FIELD_PUBLISH_UP_LABEL="Start Publishing (Ấn định thời điểm BẬT module) (để trống khi không dùng chức năng này)"
 COM_MODULES_FIELD_SHOWTITLE_LABEL="Hiện tiêu đề"
 COM_MODULES_FIELD_VALUE_NOCACHING="No caching"
 COM_MODULES_FIELDSET_RULES="Phân quyền"
