--- a/administrator/language/vn-VN/joomla.ini
+++ b/administrator/language/vn-VN/joomla.ini
@@ -275,7 +275,7 @@ JFIELD_NOTE_DESC="Note"
 JFIELD_NOTE_LABEL="Ghi chú riếng cho admin"
 JFIELD_OPTION_NONE="None"
 JFIELD_ORDERING_DESC="Select the ordering."
-JFIELD_ORDERING_LABEL="Ordering"
+JFIELD_ORDERING_LABEL="Ordering - thứ tự"
 JFIELD_PARAMS_LABEL="Options"
 JFIELD_PASSWORD_INDICATE_COMPLETE="Password accepted"
 JFIELD_PASSWORD_INDICATE_INCOMPLETE="Password doesn't meet the site's requirements."
@@ -776,13 +776,13 @@ JTOOLBAR_CLOSE="Đóng"
 JTOOLBAR_DEFAULT="Default"
 JTOOLBAR_DELETE="Delete - Xóa"
 JTOOLBAR_DELETE_ALL="Xóa tất cả"
-JTOOLBAR_DISABLE="Disable"
+JTOOLBAR_DISABLE="Disable - TẮT"
 JTOOLBAR_DUPLICATE="Tạo bản Copy mới"
 JTOOLBAR_EDIT="Edit"
 JTOOLBAR_EDIT_CSS="Edit CSS"
 JTOOLBAR_EDIT_HTML="Edit HTML"
 JTOOLBAR_EMPTY_TRASH="Empty Trash"
-JTOOLBAR_ENABLE="Enable"
+JTOOLBAR_ENABLE="Enable - BẬT"
 JTOOLBAR_EXPORT="Export"
 JTOOLBAR_HELP="Hướng dẫn"
 JTOOLBAR_INSTALL="Install"
