--- a/administrator/language/vn-VN/mod_custom.ini
+++ b/administrator/language/vn-VN/mod_custom.ini
@@ -4,6 +4,6 @@
 ; Note : All ini files need to be saved as UTF-8
 
 MOD_CUSTOM="Custom HTML - Văn bản tự do"
-MOD_CUSTOM_FIELD_PREPARE_CONTENT_DESC="Optionally prepare the content with Joomla Content Plugins."
-MOD_CUSTOM_FIELD_PREPARE_CONTENT_LABEL="Prepare Content"
-MOD_CUSTOM_XML_DESCRIPTION="Trình soạn thảo tích hợp, cho phép bạn soạn các nội dung như đăng Tin Bài: văn bản tự do, chèn hình (ví dụ: ảnh làm banner)"
+MOD_CUSTOM_FIELD_PREPARE_CONTENT_DESC="Văn bản tự do tại module này sẽ hoạt động với các tính năng từ Content Plugins giúp thêm các tính năng bổ sung cho văn bản kèm theo. (Lưu ý, hiệu suất có thể bị giảm)"
+MOD_CUSTOM_FIELD_PREPARE_CONTENT_LABEL="Khai thác tính năng Content Plugins để xử lý văn bản nhập vào"
+MOD_CUSTOM_XML_DESCRIPTION="<span class=\"badge bg-info\">mod_custom</span>Trình soạn thảo tích hợp, cho phép bạn soạn các nội dung như đăng Tin Bài: văn bản tự do, chèn hình (ví dụ: ảnh làm banner)"
