--- a/api/language/vn-VN/joomla.ini
+++ b/api/language/vn-VN/joomla.ini
@@ -39,47 +39,47 @@ JH4="h4"
 JH5="h5"
 JH6="h6"
 
-ERROR="Error"
-INFO="Info"
-NOTICE="Notice"
-MESSAGE="Message"
-WARNING="Warning"
+ERROR="Error - Lỗi"
+INFO="Info - Thông tin"
+NOTICE="Notice - Lưu ý"
+MESSAGE="Message - Thông báo"
+WARNING="Warning - Cảnh báo"
 
 JACTIONS="Actions for: %s"
 JADMINISTRATION="Administration"
 JADMINISTRATOR="Administrator"
 JALIAS="Alias"
-JALL="All"
-JALL_LANGUAGE="All"
+JALL="All - tất cả"
+JALL_LANGUAGE="All - Tất cả"
 JAPI="API"
-JAPPLY="Save"
+JAPPLY="Save - Lưu"
 JARCHIVED="Archived"
-JASSOCIATIONS_ASC="Associations ascending"
-JASSOCIATIONS_DESC="Associations descending"
-JAUTHOR="Author"
-JAUTHOR_ASC="Author ascending"
-JAUTHOR_DESC="Author descending"
+JASSOCIATIONS_ASC="Associations tăng dần"
+JASSOCIATIONS_DESC="Associations giảm dần"
+JAUTHOR="Tác giả"
+JAUTHOR_ASC="Tên tác giả - tăng dần"
+JAUTHOR_DESC="Tên tác giả - giảm dần"
 JCANCEL="Cancel"
 JCATEGORIES="Categories"
-JCATEGORY="Category"
-JCATEGORY_ASC="Category ascending"
-JCATEGORY_DESC="Category descending"
-JCATEGORY_SPRINTF="Category: %s"
+JCATEGORY="Danh mục"
+JCATEGORY_ASC="Tên danh mục - tăng dần"
+JCATEGORY_DESC="Tên danh mục - giảm dần"
+JCATEGORY_SPRINTF="Danh mục: %s"
 JCLEAR="Clear"
 JCLIENT="Location"
-JCLOSE="Close"
+JCLOSE="Close - Đóng"
 JCONFIG_PERMISSIONS_DESC="Permissions for this component unless they are changed for a specific item."
 JCONFIG_PERMISSIONS_LABEL="Permissions"
 JCURRENT="Current"
 JDATE="Date"
-JDATE_ASC="Date ascending"
-JDATE_DESC="Date descending"
-JDAY="Day"
-JDEFAULT="Default"
-JDEFAULTLANGUAGE="Language - Default"
+JDATE_ASC="Ngày cũ lên trước"
+JDATE_DESC="Ngày mới lên trước"
+JDAY="Ngày"
+JDEFAULT="Default - mặc định"
+JDEFAULTLANGUAGE="Ngôn ngữ - Default (mặc định)"
 JDETAILS="Details"
-JDISABLED="Disabled"
-JENABLED="Enabled"
+JDISABLED="Disabled - TẮT"
+JENABLED="Enabled - BẬT"
 JFALSE="False"
 JFEATURE="Feature"
 JFEATURED="Featured"
@@ -275,7 +275,7 @@ JFIELD_NOTE_DESC="Note"
 JFIELD_NOTE_LABEL="Note"
 JFIELD_OPTION_NONE="None"
 JFIELD_ORDERING_DESC="Select the ordering."
-JFIELD_ORDERING_LABEL="Ordering"
+JFIELD_ORDERING_LABEL="Ordering - Thứ tự"
 JFIELD_PARAMS_LABEL="Options"
 JFIELD_PASSWORD_INDICATE_COMPLETE="Password accepted"
 JFIELD_PASSWORD_INDICATE_INCOMPLETE="Password doesn't meet the site's requirements."
@@ -773,13 +773,13 @@ JTOOLBAR_CLOSE="Close"
 JTOOLBAR_DEFAULT="Default"
 JTOOLBAR_DELETE="Delete"
 JTOOLBAR_DELETE_ALL="Delete All"
-JTOOLBAR_DISABLE="Disable"
+JTOOLBAR_DISABLE="Disable - TẮT"
 JTOOLBAR_DUPLICATE="Duplicate"
 JTOOLBAR_EDIT="Edit"
 JTOOLBAR_EDIT_CSS="Edit CSS"
 JTOOLBAR_EDIT_HTML="Edit HTML"
 JTOOLBAR_EMPTY_TRASH="Empty Trash"
-JTOOLBAR_ENABLE="Enable"
+JTOOLBAR_ENABLE="Enable - BẬT"
 JTOOLBAR_EXPORT="Export"
 JTOOLBAR_HELP="Help"
 JTOOLBAR_INSTALL="Install"
