--- a/language/vn-VN/mod_articles_archive.ini
+++ b/language/vn-VN/mod_articles_archive.ini
@@ -6,5 +6,5 @@
 MOD_ARTICLES_ARCHIVE="Tin Bài - bài Archive lưu trữ"
 MOD_ARTICLES_ARCHIVE_DATE="%1$s, %2$s"
 MOD_ARTICLES_ARCHIVE_FIELD_COUNT_LABEL="# Hiển thị các bài trong phạm vi bao nhiêu tháng"
-MOD_ARTICLES_ARCHIVE_XML_DESCRIPTION="Module hiển thị tin bài xếp theo danh sách thời gian tháng năm . Lưu ý các bài được đánh dấu là Archive mới xuất hiện trong danh sách liên kết."
+MOD_ARTICLES_ARCHIVE_XML_DESCRIPTION="<span class=\"badge bg-info\">mod_articles_archive</span>Module hiển thị tin bài xếp theo danh sách thời gian tháng năm . Lưu ý các bài được đánh dấu là Archive mới xuất hiện trong danh sách liên kết."
 
