--- a/language/vn-VN/mod_articles_categories.ini
+++ b/language/vn-VN/mod_articles_categories.ini
@@ -12,5 +12,5 @@ MOD_ARTICLES_CATEGORIES_FIELD_PARENT_LABEL="Chọn Danh Mục"
 MOD_ARTICLES_CATEGORIES_FIELD_SHOW_CHILDREN_LABEL="Hiện Danh Mục con"
 MOD_ARTICLES_CATEGORIES_FIELD_SHOW_DESCRIPTION_LABEL="Hiện Description - Văn bản mô tả mở rộng của Danh Mục"
 MOD_ARTICLES_CATEGORIES_TITLE_HEADING_LABEL="Heading Style"
-MOD_ARTICLES_CATEGORIES_XML_DESCRIPTION="Module này hiện danh sách các Danh Mục con của một Danh mục được chọn"
+MOD_ARTICLES_CATEGORIES_XML_DESCRIPTION="<span class=\"badge bg-info\">mod_articles_categories</span>Module này hiện danh sách các Danh Mục con của một Danh mục được chọn"
 
