--- a/language/vn-VN/mod_articles_category.ini
+++ b/language/vn-VN/mod_articles_category.ini
@@ -72,5 +72,5 @@ MOD_ARTICLES_CATEGORY_READ_MORE="Read more: "
 MOD_ARTICLES_CATEGORY_READ_MORE_TITLE="Read More ..."
 MOD_ARTICLES_CATEGORY_REGISTER_TO_READ_MORE="Register to read more"
 MOD_ARTICLES_CATEGORY_UNTAGGED="Untagged"
-MOD_ARTICLES_CATEGORY_XML_DESCRIPTION="Module hiển thị các tin bài với nhiều chế độ, nhiều kiểu kết hợp với nhau. Vd: hiện tin trong 1 hoặc nhiều Danh mục, tin theo tác giả, theo ngày tháng...; chế độ động. Việc sử dụng Module này tương đối phức tạp với khá nhiều các sử dụng và tính năng nâng cao; vì vậy bạn nên đọc hướng dẫn trước khi sử dụng, nếu tài liệu khó hiểu hoặc bạn không sử dụng được module này thì tìm các module khác với tính năng đơn giản hơn để sử dụng."
+MOD_ARTICLES_CATEGORY_XML_DESCRIPTION="<span class=\"badge bg-info\">mod_articles_category</span>Module hiển thị các tin bài với nhiều chế độ, nhiều kiểu kết hợp với nhau. Vd: hiện tin trong 1 hoặc nhiều Danh mục, tin theo tác giả, theo ngày tháng...; chế độ động. Việc sử dụng Module này tương đối phức tạp với khá nhiều các sử dụng và tính năng nâng cao; vì vậy bạn nên đọc hướng dẫn trước khi sử dụng, nếu tài liệu khó hiểu hoặc bạn không sử dụng được module này thì tìm các module khác với tính năng đơn giản hơn để sử dụng."
 
