--- a/language/vn-VN/mod_articles_latest.ini
+++ b/language/vn-VN/mod_articles_latest.ini
@@ -19,5 +19,5 @@ MOD_LATEST_NEWS_VALUE_RECENT_MODIFIED="Mới chỉnh sửa xong lên trước"
 MOD_LATEST_NEWS_VALUE_RECENT_PUBLISHED="Mới xuất bản lên trước"
 MOD_LATEST_NEWS_VALUE_RECENT_RAND="Ngẫu nhiên"
 MOD_LATEST_NEWS_VALUE_RECENT_TOUCHED="Recently Touched First"
-MOD_LATEST_NEWS_XML_DESCRIPTION="Hiển thị các tin bài mới nhất."
+MOD_LATEST_NEWS_XML_DESCRIPTION="<span class=\"badge bg-info\">mod_articles_latest</span>Hiển thị các tin bài mới nhất."
 
