--- a/language/vn-VN/mod_articles_news.ini
+++ b/language/vn-VN/mod_articles_news.ini
@@ -28,6 +28,6 @@ MOD_ARTICLES_NEWS_READMORE="Read more ..."
 MOD_ARTICLES_NEWS_READMORE_REGISTER="Register to Read More"
 MOD_ARTICLES_NEWS_TITLE_HEADING="Thẻ html heading bao bọc tiêu đề tin bài"
 MOD_ARTICLES_NEWS_VALUE_ONLY_SHOW_FEATURED="Chỉ tin bài được đánh dấu Feature"
-MOD_ARTICLES_NEWS_XML_DESCRIPTION="Hiển thị tin bài với hình ảnh, tiêu đề, các field tuỳ chỉnh, nội dung Intro"
+MOD_ARTICLES_NEWS_XML_DESCRIPTION="<span class=\"badge bg-info\">mod_articles_news</span>Hiển thị tin bài với hình ảnh, tiêu đề, các field tuỳ chỉnh, nội dung Intro"
 JGLOBAL_ORDER_DIRECTION_LABEL="Quy tắc sắp xếp"
 
