--- a/language/vn-VN/mod_articles_popular.ini
+++ b/language/vn-VN/mod_articles_popular.ini
@@ -17,5 +17,5 @@ MOD_POPULAR_OPTION_MODIFIED_VALUE="Ngày Sửa"
 MOD_POPULAR_OPTION_OFF_VALUE="Off"
 MOD_POPULAR_OPTION_RELATIVEDAY_VALUE="Tính toán theo khoảng thời gian"
 MOD_POPULAR_OPTION_STARTPUBLISHING_VALUE="Ngày bắt đầu xuất bản"
-MOD_POPULAR_XML_DESCRIPTION="Module này hiển thị các Tin bài có số lượt xem nhiều nhất"
+MOD_POPULAR_XML_DESCRIPTION="<span class=\"badge bg-info\">mod_articles_popular</span>Module này hiển thị các Tin bài có số lượt xem nhiều nhất"
 
