--- a/language/vn-VN/mod_banners.ini
+++ b/language/vn-VN/mod_banners.ini
@@ -18,5 +18,5 @@ MOD_BANNERS_FIELD_TAG_LABEL="Select by Keyword"
 MOD_BANNERS_FIELD_TARGET_LABEL="Target"
 MOD_BANNERS_VALUE_STICKYORDERING="Pinned, Ordering"
 MOD_BANNERS_VALUE_STICKYRANDOMISE="Pinned, Randomize"
-MOD_BANNERS_XML_DESCRIPTION="Module hiển thị các banner từ Component Banner"
+MOD_BANNERS_XML_DESCRIPTION="<span class=\"badge bg-info\">mod_banners</span>Module hiển thị các banner từ Component Banner"
 
