--- a/language/vn-VN/mod_breadcrumbs.ini
+++ b/language/vn-VN/mod_breadcrumbs.ini
@@ -11,5 +11,5 @@ MOD_BREADCRUMBS_FIELD_SHOWHOME_LABEL="Hiện Trang Chủ"
 MOD_BREADCRUMBS_FIELD_SHOWLAST_LABEL="Hiện phần tử cuối cùng"
 MOD_BREADCRUMBS_HERE="Bạn ở đây: "
 MOD_BREADCRUMBS_HOME="Trang chủ"
-MOD_BREADCRUMBS_XML_DESCRIPTION="Module Breadcrumbs - Thanh điều hướng giúp định vị vị trí của trang mà khách truy cập đang xem. Ví dụ minh hoạ Thanh điều hướng: Trang chủ &gt; Danh Mục A &gt; Tin Bài 1"
+MOD_BREADCRUMBS_XML_DESCRIPTION="<span class=\"badge bg-info\">mod_breadcrumbs</span> Module Breadcrumbs - Thanh điều hướng giúp định vị vị trí của trang mà khách truy cập đang xem. Ví dụ minh hoạ Thanh điều hướng: Trang chủ &gt; Danh Mục A &gt; Tin Bài 1"
 
