--- a/language/vn-VN/mod_finder.ini
+++ b/language/vn-VN/mod_finder.ini
@@ -19,13 +19,13 @@ MOD_FINDER_FIELDSET_ADVANCED_ALT_LABEL="Thay phần chữ kèm theo field nhập
 MOD_FINDER_FIELDSET_ADVANCED_SETITEMID_LABEL="Chỉ định trang trả về kết quả"
 MOD_FINDER_FIELDSET_ADVANCED_SHOW_BUTTON_LABEL="Button - Nút tìm kiếm"
 MOD_FINDER_FIELDSET_ADVANCED_SHOW_LABEL_LABEL="Hiện phần chữ kèm theo field nhập tìm kiếm"
-MOD_FINDER_FIELDSET_BASIC_AUTOSUGGEST_LABEL="Gợi ý tìm kiếm"
+MOD_FINDER_FIELDSET_BASIC_AUTOSUGGEST_LABEL="Hiện Gợi ý khi người dùng bắt đầu nhập vào ô tìm kiếm"
 MOD_FINDER_FIELDSET_BASIC_SEARCHFILTER_LABEL="Bổ sung bộ lọc sâu (Filter)"
 MOD_FINDER_FIELDSET_BASIC_SHOW_ADVANCED_LABEL="Đính kèm tính năng tìm kiếm mở rộng"
 MOD_FINDER_FIELDSET_BASIC_SHOW_ADVANCED_OPTION_LINK="Hiện Link đến Component"
 MOD_FINDER_OPENSEARCH_NAME="OpenSearch"
-MOD_FINDER_SEARCH_VALUE="Search ..."
-MOD_FINDER_SEARCHBUTTON_TEXT="Search"
-MOD_FINDER_SELECT_MENU_ITEMID="Select a menu item"
-MOD_FINDER_XML_DESCRIPTION="Đặt một form field tìm kiếm vào website. Module này chỉ tạo ra một form field tìm kiếm để khách truy cập nhập nội dung vào đó và bấm nút tìm kiếm. Còn kết quả tìm kiếm không phải do module này thực hiện, mà được được chuyển đến Component Tìm kiếm (Smart Search) để xử lý. Để cấu hình kết quả tìm kiếm, hãy truy cập vào Component Tìm kiếm (Smart Search)."
+MOD_FINDER_SEARCH_VALUE="Tìm kiếm ..."
+MOD_FINDER_SEARCHBUTTON_TEXT="Tìm kiếm"
+MOD_FINDER_SELECT_MENU_ITEMID="Lựa chọn một trang trả kết quả tìm kiếm"
+MOD_FINDER_XML_DESCRIPTION="<span class=\"badge bg-info\">mod_finder</span> Đặt một form field tìm kiếm vào website. Module này chỉ tạo ra một form field tìm kiếm để khách truy cập nhập nội dung vào đó và bấm nút tìm kiếm. Còn kết quả tìm kiếm không phải do module này thực hiện, mà được được chuyển đến Component Tìm kiếm (Smart Search) để xử lý. Để cấu hình kết quả tìm kiếm, hãy truy cập vào Component Tìm kiếm (Smart Search)."
 
