--- a/language/vn-VN/mod_languages.ini
+++ b/language/vn-VN/mod_languages.ini
@@ -13,5 +13,5 @@ MOD_LANGUAGES_FIELD_FULL_NAME_LABEL="Yes: Tên ngôn ngữ (đầy đủ) | No: 
 MOD_LANGUAGES_FIELD_HEADER_LABEL="Thêm văn bản vào phía trước"
 MOD_LANGUAGES_FIELD_INLINE_LABEL="Yes: xếp ngang | No: xếp dọc"
 MOD_LANGUAGES_FIELD_USEIMAGE_LABEL="Dùng hình lá cờ"
-MOD_LANGUAGES_XML_DESCRIPTION="Hiển thị cờ hoặc tên ngôn ngữ, khi click chọn vào thì ngôn ngữ trên website sẽ thay đổi theo. Module này chỉ hoạt động khi chế độ Đa ngôn ngữ được kích hoạt."
+MOD_LANGUAGES_XML_DESCRIPTION="<span class=\"badge bg-info\">mod_languages</span> Hiển thị cờ hoặc tên ngôn ngữ, khi click chọn vào thì ngôn ngữ trên website sẽ thay đổi theo. Module này chỉ hoạt động khi chế độ Đa ngôn ngữ được kích hoạt."
 
