--- a/language/vn-VN/mod_menu.ini
+++ b/language/vn-VN/mod_menu.ini
@@ -14,5 +14,5 @@ MOD_MENU_FIELD_TAG_ID_LABEL="Menu Tag ID"
 MOD_MENU_FIELD_TARGET_DESC="JavaScript values to position a popup window, eg top=50, left=50, width=200, height=300."
 MOD_MENU_FIELD_TARGET_LABEL="Target Position"
 MOD_MENU_TOGGLE="Toggle Navigation"
-MOD_MENU_XML_DESCRIPTION="Hiển thị menu và trình bày menu trên website. Module MENU này chỉ thiết lập cách hiển thị menu, kiểu trình bày của menu, vị trí hiển thị của menu. Việc tạo và chỉnh các menu bên trong xin mời xem ở chức năng <b>Menu và cây Menu</b>."
+MOD_MENU_XML_DESCRIPTION="<span class=\"badge bg-info\">mod_menu</span> Hiển thị menu và trình bày menu trên website. Module MENU này chỉ thiết lập cách hiển thị menu, kiểu trình bày của menu, vị trí hiển thị của menu. Việc tạo và chỉnh các menu bên trong xin mời xem ở chức năng <b>Menu và cây Menu</b>."
 
