--- a/language/vn-VN/mod_syndicate.ini
+++ b/language/vn-VN/mod_syndicate.ini
@@ -11,5 +11,5 @@ MOD_SYNDICATE_FIELD_TEXT_DESC="If empty, the default text from the language file
 MOD_SYNDICATE_FIELD_TEXT_LABEL="Chỉnh tên của link Atom/RSS Feeds"
 MOD_SYNDICATE_FIELD_VALUE_ATOM="Atom 1.0"
 MOD_SYNDICATE_FIELD_VALUE_RSS="RSS 2.0"
-MOD_SYNDICATE_XML_DESCRIPTION="Hiển thị liên kết cấp tin Atom/RSS Feeds của site, liên kết này thay đổi tương ứng với trang đang được xem. Liên kết và module sẽ hiển thị khi Feed được kích hoạt; nếu feed chưa được kích hoạt thì bạn vẫn sẽ không thấy kêt quả hiển thị. Để kích hoạt FEED cho một Danh mục Tin - Bài; vào phần thiết lập menu tương ứng, mở tab Menu Item Associations, tại field Bật Feed Link chọn Hiện."
+MOD_SYNDICATE_XML_DESCRIPTION="<span class=\"badge bg-info\">mod_syndicate</span> Hiển thị liên kết cấp tin Atom/RSS Feeds của site, liên kết này thay đổi tương ứng với trang đang được xem. Liên kết và module sẽ hiển thị khi Feed được kích hoạt; nếu feed chưa được kích hoạt thì bạn vẫn sẽ không thấy kêt quả hiển thị. Để kích hoạt FEED cho một Danh mục Tin - Bài; vào phần thiết lập menu tương ứng, mở tab Menu Item Associations, tại field Bật Feed Link chọn Hiện."
 
