--- a/language/vn-VN/mod_tags_popular.ini
+++ b/language/vn-VN/mod_tags_popular.ini
@@ -26,5 +26,5 @@ MOD_TAGS_POPULAR_MAX_LABEL="Số lượng TAG hiển thị trên danh sách"
 MOD_TAGS_POPULAR_NO_ITEMS_FOUND="Không có TAG nào."
 MOD_TAGS_POPULAR_PARENT_TAG_DESC="Limit tags shown to the children of this Parent Tag."
 MOD_TAGS_POPULAR_PARENT_TAG_LABEL="TAG cha (nếu chọn, chỉ các tag bên trong tag cha mới được hiển thị)"
-MOD_TAGS_POPULAR_XML_DESCRIPTION="Tạo và hiển thị danh sách các TAG trên website. "
+MOD_TAGS_POPULAR_XML_DESCRIPTION="<span class=\"badge bg-info\">mod_tags_popular</span> Tạo và hiển thị danh sách các TAG trên website. "
 
