--- a/language/vn-VN/mod_tags_popular.sys.ini
+++ b/language/vn-VN/mod_tags_popular.sys.ini
@@ -6,5 +6,5 @@
 MOD_TAGS_POPULAR="Danh sách TAG"
 MOD_TAGS_POPULAR_LAYOUT_CLOUD="Cloud"
 MOD_TAGS_POPULAR_LAYOUT_DEFAULT="Default"
-MOD_TAGS_POPULAR_XML_DESCRIPTION="Tạo và hiển thị danh sách TAG trên website."
+MOD_TAGS_POPULAR_XML_DESCRIPTION="Tạo và hiển thị danh sách các TAG trên website."
 
