--- a/language/vn-VN/mod_users_latest.ini
+++ b/language/vn-VN/mod_users_latest.ini
@@ -6,5 +6,5 @@
 MOD_USERS_LATEST="User - Thành viên mới"
 MOD_USERS_LATEST_FIELD_FILTER_GROUPS_LABEL="Filter Groups: YES: Hiển thị danh sách user thành viên cùng cấp độ và cấp độ thấp hơn. | NO: Hiển thị tất cả các User - thành viên mới"
 MOD_USERS_LATEST_FIELD_NUMBER_LABEL="Số user muốn hiển thị"
-MOD_USERS_LATEST_XML_DESCRIPTION="Hiển thị danh sách các User thành viên mới được tạo. Chỉ hiển thị username trên danh sách."
+MOD_USERS_LATEST_XML_DESCRIPTION="<span class=\"badge bg-info\">mod_users_latest</span> Hiển thị danh sách các User thành viên mới được tạo. Chỉ hiển thị username trên danh sách."
 
