--- a/language/vn-VN/mod_whosonline.ini
+++ b/language/vn-VN/mod_whosonline.ini
@@ -18,6 +18,6 @@ MOD_WHOSONLINE_MEMBERS_OTHER="có %s&#160; thành viên"
 MOD_WHOSONLINE_NO_SESSION_METADATA="Unable to display online user data at this time."
 MOD_WHOSONLINE_SAME_GROUP_MESSAGE="List of Users who belong to your user groups or your user groups' child groups"
 MOD_WHOSONLINE_SHOWMODE_LABEL="Kiểu hiển thị"
-MOD_WHOSONLINE_XML_DESCRIPTION="Hiển thị thông tin về có bao nhiêu khách và bao nhiêu Thành viên (user) đang truy cập vào website."
+MOD_WHOSONLINE_XML_DESCRIPTION="<span class=\"badge bg-info\">mod_whosonline</span> Hiển thị thông tin về có bao nhiêu khách và bao nhiêu Thành viên (user) đang truy cập vào website."
 MOD_WHOSONLINE_WE_HAVE="Hiện %1$s và %2$s đang online trên website" ; %1$s is for guests and %2$s for members
 
