--- a/language/vn-VN/joomla.ini
+++ b/language/vn-VN/joomla.ini
@@ -208,7 +208,7 @@ JFIELD_META_KEYWORDS_LABEL="Keywords"
 JFIELD_META_RIGHTS_DESC="Describe what rights others have to use this content."
 JFIELD_META_RIGHTS_LABEL="Content Rights"
 JFIELD_ORDERING_DESC="Ordering of the article within the category."
-JFIELD_ORDERING_LABEL="Ordering"
+JFIELD_ORDERING_LABEL="Ordering - Thứ tự"
 JFIELD_PASSWORD_INDICATE_COMPLETE="Password accepted"
 JFIELD_PASSWORD_INDICATE_INCOMPLETE="Password doesn't meet the site's requirements."
 JFIELD_PASSWORD_NOT_ENOUGH_INTEGERS_N_ONE="Password does not have enough numbers. At least 1 number is required."
