--- a/language/vn-VN/mod_feed.ini
+++ b/language/vn-VN/mod_feed.ini
@@ -17,5 +17,5 @@ MOD_FEED_FIELD_RSSURL_LABEL="Feed URL"
 MOD_FEED_FIELD_RTL_LABEL="RTL Feed"
 MOD_FEED_FIELD_WORDCOUNT_DESC="0 will show all the text."
 MOD_FEED_FIELD_WORDCOUNT_LABEL="Word Count"
-MOD_FEED_XML_DESCRIPTION="This module allows the displaying of a syndicated feed."
+MOD_FEED_XML_DESCRIPTION="<span class=\"badge bg-info\">mod_feed</span> This module allows the displaying of a syndicated feed."
 
