--- a/language/vn-VN/mod_login.ini
+++ b/language/vn-VN/mod_login.ini
@@ -25,5 +25,5 @@ MOD_LOGIN_VALUE_ICONS="Icons"
 MOD_LOGIN_VALUE_NAME="Tên"
 MOD_LOGIN_VALUE_TEXT="Chỉ văn bản"
 MOD_LOGIN_VALUE_USERNAME="Username"
-MOD_LOGIN_XML_DESCRIPTION="Vùng login - Đăng nhập với form field username và password để đăng nhập vào Frontend."
+MOD_LOGIN_XML_DESCRIPTION="<span class=\"badge bg-info\">mod_login</span> Vùng login - Đăng nhập với form field username và password để đăng nhập vào Frontend."
 
