--- a/administrator/language/vn-VN/joomla.ini
+++ b/administrator/language/vn-VN/joomla.ini
@@ -532,7 +532,7 @@ JGLOBAL_NAME_DESC="Name descending"
 JGLOBAL_NEWITEMSFIRST_DESC="New items default to the first position. The ordering can be changed after this item is saved."
 JGLOBAL_NEWITEMSLAST_DESC="New items default to the last position. The ordering can be changed after this item is saved."
 JGLOBAL_NO_ITEM_SELECTED="No items selected"
-JGLOBAL_NO_MATCHING_RESULTS="No Matching Results"
+JGLOBAL_NO_MATCHING_RESULTS="Chưa có dữ liệu nào được thiết lập ở đây"
 JGLOBAL_NO_ORDER="Không áp dụng kiểu sắp xếp"
 JGLOBAL_NONAPPLICABLE="N/A"
 JGLOBAL_NUM_COLUMNS_LABEL="# Số cột"
