--- a/administrator/language/vn-VN/mod_popular.ini
+++ b/administrator/language/vn-VN/mod_popular.ini
@@ -11,7 +11,7 @@ MOD_POPULAR_FIELD_VALUE_ADDED_OR_MODIFIED_BY_ME="Added or modified by me"
 MOD_POPULAR_FIELD_VALUE_ANYONE="Anyone"
 MOD_POPULAR_FIELD_VALUE_NOT_ADDED_OR_MODIFIED_BY_ME="Not added or modified by me"
 MOD_POPULAR_ITEMS="Popular Items"
-MOD_POPULAR_NO_MATCHING_RESULTS="No Matching Results"
+MOD_POPULAR_NO_MATCHING_RESULTS="Chưa có dữ liệu nào được thiết lập ở đây"
 MOD_POPULAR_TITLE_ONE="Top Popular Article"
 MOD_POPULAR_TITLE_OTHER="Popular Articles"
 MOD_POPULAR_TITLE_BY_ME_ONE="Top Popular Article By Me"
