--- a/language/vn-VN/joomla.ini
+++ b/language/vn-VN/joomla.ini
@@ -326,7 +326,7 @@ JGLOBAL_MAXIMUM_UPLOAD_SIZE_LIMIT="Maximum upload size: <strong>%s</strong>"
 JGLOBAL_NAME_ASC="Name ascending"
 JGLOBAL_NAME_DESC="Name descending"
 JGLOBAL_NEWITEMSLAST_DESC="New items default to the last position. Ordering can be changed after this item has been saved."
-JGLOBAL_NO_MATCHING_RESULTS="No Matching Results"
+JGLOBAL_NO_MATCHING_RESULTS="Chưa có dữ liệu nào được thiết lập ở đây"
 JGLOBAL_NUM="#"
 JGLOBAL_OTPMETHOD_NONE="Disable Two Factor Authentication"
 JGLOBAL_PASSWORD="Password"
